# The-ASTRACAT-DNS-Resolver

./: Cargo.toml  Dockerfile  README.md  grafana.json  main.go  main.rs
dns/: query_type.rs
resolver/: cache.go  resolver.go  root.go
src/: cache.rs  main.rs  mod.rs  resolver.rs
src/dns/: byte_packet_buffer.rs  dns_packet.rs  dns_record.rs  query_type.rs
