[package]
name = "astracat-dns-resolver"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
trust-dns-proto = "0.22"
dashmap = "5"
once_cell = "1"
hyper = "0.14"
prometheus = "0.13"
libc = "0.2"

# Добавление этой секции снизит требования к памяти во время сборки
[profile.release]
codegen-units = 1
lto = "fat"

# Отключение оптимизаций для tokio в релизной сборке
# Это нужно только для успешной компиляции на серверах с малым объемом памяти
# Влияет только на время сборки, не на производительность в runtime
[profile.release.build-override]
opt-level = 0
